2010-02-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: fixed bug in set
	  array dimension.

2010-02-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Project.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomField.cs:
	* MonoDevelop.Projects.Dom/DomEvent.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/Namespace.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom/IBaseMember.cs:
	* MonoDevelop.Projects.Dom/DomParameter.cs:
	* MonoDevelop.Projects.Dom/LocalVariable.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs: Use the new
	  IconId type.

2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects.Extensions/ItemTypeCondition.cs:
	* MonoDevelop.Projects.Extensions/ProjectLanguageCondition.cs:
	  Cache the extension chain per-thread, to avoid recreating it
	  at every call.

2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.Extensions/ProjectLanguageCondition.cs:
	  ActiveLanguageCondition has been replaced by
	  ProjectLanguageCondition in MD.Projects.

	* MonoDevelop.Projects.addin.xml: Allow using item type and
	  languge name conditions when registering project service
	  extensions.

	* MonoDevelop.Projects/ProjectService.cs: Project service
	  extensions now support some conditions, so we have to create
	  a new context for every extension chain request.

2010-02-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects.Extensions/DataTypeCodon.cs:
	* MonoDevelop.Projects.Extensions/ItemPropertyCodon.cs: Use
	  the new api which allows lazy loading serializable types and
	  properties.

	* MonoDevelop.Projects/HelpService.cs: Added missing
	  initialization check.
