@@ -1,3 +1,8 @@
+2010-02-23  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
+	  Fixed 'Bug 582017 - C# Generic Type Constraints'.
+
 2010-02-19  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom/DomReturnType.cs: fixed bug in set
